<resources>
    <string name="app_name">Kveld Med Venner</string>
    <string name="friends">Venner</string>
    <string name="settings">Innstillinger</string>
    <string name="restaurants">Restauranter</string>
    <string name="orders">Bestillinger</string>
    <string name="first_name">Fornavn</string>
    <string name="last_name">Etternavn</string>
    <string name="name">Navn</string>
    <string name="adress">Adresse</string>
    <string name="ph_no">Telefon</string>
    <string name="type">Type</string>
    <string name="date">Dato</string>
    <string name="time">Tid</string>
    <string name="restaurant">Restaurant</string>
    <string name="sms_service">SMS-tjeneste</string>
    <string name="sms_service_summary">Påminnelse om event</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_restaurant_btn">Legg til restaurant</string>
    <string name="update_restaurant_btn">Oppdater restaurant</string>
    <string name="delete_restaurant_btn">Slett restaurant</string>
    <string name="add_friend_btn">Legg til venn</string>
    <string name="update_friend_btn">Oppdater venn</string>
    <string name="delete_friend_btn">Slett venn</string>
    <string name="add_order_btn">Legg til bestilling</string>
    <string name="delete_order_btn">Slett bestilling</string>
    <string name="add_friends_to_order_btn">Legg til venner</string>
    <string name="attending_friends_txt">Inviterte venner: </string>
    <string name="notification_title">Påminnelse om avtale</string>
    <string name="notification_txt">Du har en avtale i dag</string>
    <string name="set_time_sms_title">Tidspunkt for sms-tjeneste</string>
    <string name="time_format_txt">Format på klokkeslett må være tt:mm</string>
    <string name="add_friends_header">Legg til venner</string>
    <string name="sms_permitted">SMS-permitted</string>
    <string name="ok">Ok</string>
    <string name="sms_permission_title">Tillat SMS</string>
    <string name="sms_permission_txt">SMS tillat</string>
</resources>
