<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RestaurantActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurants"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="Navn"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"></TextView>

    <EditText
        android:id="@+id/r_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorFont"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/adress"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary">
    </TextView>

    <EditText
        android:id="@+id/r_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorFont"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/ph_no"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary">
    </TextView>

    <EditText
        android:id="@+id/r_ph_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorFont"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/type"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary">
    </TextView>

    <EditText
        android:id="@+id/r_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorFont" />

    <Button
        android:id="@+id/add_restaurant"
        android:text="Legg til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorSecondary"/>

    <Button
        android:id="@+id/update_restaurant"
        android:text="Oppdater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorSecondary"/>

    <Button
        android:id="@+id/delete_restaurant"
        android:text="Slett restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorSecondary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>